# herdr-floax

./: Cargo.toml  LICENSE  README.md  floax.conf.example  herdr-plugin.toml
scripts/: floating-shell.sh  floax-tmux.conf  install-keybinding.sh  toggle-floating.sh
src/: config.rs  main.rs  snapshot.rs  ui.rs
