[package]
name = "herdr-floax"
version = "0.2.0"
edition = "2021"
description = "Floating scratch shell for herdr — a tmux-floax style sized popup, drawn in-pane"
license = "MIT"

[dependencies]
# TUI drawing; also re-exports crossterm so backend + terminal setup share one version.
ratatui = "0.29"
# The embedded terminal: portable-pty spawns the shell PTY, vt100 emulates it.
portable-pty = "0.8"
vt100 = "0.15"
# SIGWINCH → re-layout + PTY resize (input is raw stdin passthrough, not events).
signal-hook = "0.3"
